--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Locnote</title>
-<link href="style.css" type="text/css" rel="stylesheet" />
+<title>无标题文档</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="script/jquery.fancybox/jquery.fancybox.css" media="screen" />
 <script type="text/javascript" src="script/jquery.js"></script>
 <script type="text/javascript" src="script/jquery.fancybox/jquery.easing.js"></script>
@@ -12,66 +12,55 @@
 
 <body>
 <div id="warp">
-     <div class="New"></div>
-     <div id="Head">
-       <div class="HeadLeft">
-               <div class="HeadLeftTop">
-                    <a href="#"><img src="images/light.jpg" width="100" height="170" border="0" /></a>
-                    <h1>The Description</h1>
-                    <h2>THE APP</h2>
+     <div class="head">
+          <div class="top">
+                <div class="head-left"><a href="#"><img src="images/btn-top.jpg" width="180" height="70" border="0" /></a></div>
+                <div class="head-right"></div>
+                <div style=" clear:both"></div>
+          </div>
+          <div class="head-bottom">
+               <ul> 
+                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</li>
+                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore </li>
+               </ul>
+          </div>
+     </div>
+     <div class="content">
+       <div class="content-left">
+               <div class="content-left-top"></div>
+               <div class="content-left-bottom">
+                    <p>" The app features an intuitive interface that is extremely easy on the eyes. "</p>
+                    <span>— Daivd Pittman</span>
+                 <span style="font-size:10px;">iconnice.com</span>
                </div>
-               <div class="HeadLeftCenter">
-                    <p>Lorem ipsum dolor sit amet, consectetur<br />adipisicing elit, sed do eiusmod tempor<br />incididunt ut labore et dolore magna aliqua. <br />
-                       Ut enim ad minim veniam.<br />
-                       Curabitur commodo enim et lorem facilisis at adipiscing dolor blandit. Duis vel posuere ligula. </p>
-               </div>
-               <div class="HeadLeftBottom"><a href="#"><img src="images/btn-green.jpg" width="230" height="85" border="0" /></a></div>
-       </div>
-           <div class="HeadCenter"><img src="images/iphone.jpg" width="296" height="600" /></div>
-           <div class="HeadRight">
-                <div class="HeadRightTop">
-                      <p><em>" The app features an intuitive interface that <br />
-                              is extremely easy on the eyes. "</em></p>
-                      <p style=" text-align:right; font-size:14px; margin-top:15px;"><em>---Daivd Pittman</em></p>
-                      <p style=" text-align:right; font-size:10px;"><em>iconnice.com</em></p>
-                </div> 
-                <div class="HeadRightCenter">
-                      <h3><img src="images/arrow-big.jpg" width="22" height="22" style=" margin-right:10px" />Screenshot</h3>
-                </div>  
-                <div class="HeadRightBottom">
-                  <div class="ProOverview">
+          </div>
+          <div class="content-right">
+            <h1><strong>Your Great Description Here </strong><br />
+                 Try it For Free!</h1>
+                 <div class="feature">
+                       <div class="feature1"><h2>Feature</h2></div>
+                       <div class="feature2"><a href="#"><img src="images/btn-nore.jpg" width="74" height="17" border="0" /></a></div>
+                       <div style=" clear:both"></div>
+                 </div>
+                 <div class="heart">Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                 <div class="v">Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                 <div class="yes">Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipisicing elit, sed do eiusmod tempor <a href="#">incididunt</a> ut labore et dolore magna aliqua. </div>
+                <h2>Screenshot</h2>
+                 <div class="ProOverview">
                      <div class="ProImg">
-                     <a href="images/pic1big.jpg"><img src="images/pic.jpg" width="91" height="91" border="0" /></a>
-                     <a href="images/pic1big.jpg"><img src="images/pic.jpg" width="91" height="91" border="0" /></a>
-                     <a href="images/pic1big.jpg"><img src="images/pic.jpg" width="91" height="91" border="0" /></a>
-                     <a href="images/pic1big.jpg"><img src="images/pic.jpg" width="91" height="91" border="0" /></a>
-               </div> </div>  </div>  
-           </div>
+                  <a href="images/pic1big.jpg"><img src="images/pic1.jpg" width="102" height="102" border="0" /></a>
+                  <a href="images/pic1big.jpg"><img src="images/pic1.jpg" width="102" height="102" border="0" /></a>
+                  <a href="images/pic1big.jpg"><img src="images/pic1.jpg" width="102" height="102" border="0" /></a>
+                  <a href="images/pic1big.jpg"><img src="images/pic1.jpg" width="102" height="102" border="0" /></a>
+                <div style=" clear:both"></div>
+                </div></div>
+                <h2>Contact</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <p><img src="images/rss.jpg" width="30" height="32"  style=" padding-right:10px;"/><img src="images/facebook.jpg" width="30" height="32" /></p>
+          </div>
+          <div style="clear:both"></div>
      </div>
-     <div id="Contect">
-           <div class="ContectLeft">
-                 <h4>Features</h4>
-             <ul>
-                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                 </ul>
-                <a href="#"><img src="images/learn.jpg" width="87" height="20" border="0" style="margin-left:15px" /></a></div>
-           <div class="ContectRight">
-                <h4>Contact</h4>
-                <p><img src="images/arrow-small.jpg" width="13" height="13" style=" margin-right:10px" />Get in touch with us, or want latest news.</p>
-             <div class="One">
-                          <div class="One_1"></div>
-               <div class="One_2"><input name="textfield" type="text" class="txt" id="textfield" size="55" maxlength="100" value="E-mail address" /></div>
-                          <div style=" clear:both"></div>
-             </div>
-                     <div class="Two">
-                          <div class="Two_1"></div>
-                          <div class="Two_2"><textarea name="textfield2" cols="59" class="txt" id="textfield2">your text</textarea></div>
-                     </div>
-             <img src="images/submit.jpg" class="submit" />
-           </div>
-     </div>
-     <div id="Foot">website design by iconnice.com</div>
+     <div class="foot"><p>website design by <a href="http://iconnice.com">iconnice.com</a> © 2009-2010</p></div>
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
