--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>Locnote</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="script/jquery.fancybox/jquery.fancybox.css" media="screen" />
 <script type="text/javascript" src="script/jquery.js"></script>
